--- a/EFI/OC/Kexts/AirportBrcmFixup.kext/Contents/Info.plist
+++ b/EFI/OC/Kexts/AirportBrcmFixup.kext/Contents/Info.plist
@@ -7,17 +7,17 @@
 	<key>CFBundleDevelopmentRegion</key>
 	<string>en</string>
 	<key>CFBundleExecutable</key>
-	<string>CPUFriend</string>
+	<string>AirportBrcmFixup</string>
 	<key>CFBundleIdentifier</key>
-	<string>org.vanilla.driver.CPUFriend</string>
+	<string>as.lvs1974.AirportBrcmFixup</string>
 	<key>CFBundleInfoDictionaryVersion</key>
 	<string>6.0</string>
 	<key>CFBundleName</key>
-	<string>CPUFriend</string>
+	<string>AirportBrcmFixup</string>
 	<key>CFBundlePackageType</key>
 	<string>KEXT</string>
 	<key>CFBundleShortVersionString</key>
-	<string>1.2.0</string>
+	<string>2.0.8</string>
 	<key>CFBundleSignature</key>
 	<string>????</string>
 	<key>CFBundleSupportedPlatforms</key>
@@ -25,7 +25,7 @@
 		<string>MacOSX</string>
 	</array>
 	<key>CFBundleVersion</key>
-	<string>1.2.0</string>
+	<string>2.0.8</string>
 	<key>DTCompiler</key>
 	<string>com.apple.compilers.llvm.clang.1_0</string>
 	<key>DTPlatformBuild</key>
@@ -42,48 +42,73 @@
 	<string>10E1001</string>
 	<key>IOKitPersonalities</key>
 	<dict>
-		<key>CPUFriend</key>
+		<key>as.lvs1974.AirportBrcmFixup</key>
 		<dict>
 			<key>CFBundleIdentifier</key>
-			<string>org.vanilla.driver.CPUFriend</string>
+			<string>as.lvs1974.AirportBrcmFixup</string>
 			<key>IOClass</key>
-			<string>CPUFriend</string>
+			<string>AirportBrcmFixup</string>
 			<key>IOMatchCategory</key>
-			<string>CPUFriend</string>
+			<string>AirportBrcmFixup</string>
 			<key>IOProviderClass</key>
 			<string>IOResources</string>
 			<key>IOResourceMatch</key>
 			<string>IOKit</string>
 		</dict>
-		<key>CPUFriendPlatform</key>
+		<key>as.lvs1974.FakeAirportBrcmFixup</key>
 		<dict>
 			<key>CFBundleIdentifier</key>
-			<string>org.vanilla.driver.CPUFriend</string>
+			<string>as.lvs1974.AirportBrcmFixup</string>
 			<key>IOClass</key>
-			<string>CPUFriendData</string>
+			<string>FakeBrcm</string>
+			<key>IOMatchCategory</key>
+			<string>IODefaultMatchCategory</string>
+			<key>IONameMatch</key>
+			<array>
+				<string>pci14e4,43ba</string>
+				<string>pci14e4,43a3</string>
+				<string>pci14e4,43a0</string>
+				<string>pci14e4,4331</string>
+				<string>pci14e4,4353</string>
+				<string>pci14e4,43b1</string>
+				<string>pci14e4,43b2</string>
+				<string>pci14e4,4357</string>
+				<string>pci14e4,432b</string>
+				<string>pci14e4,4311</string>
+				<string>pci14e4,4312</string>
+				<string>pci14e4,4313</string>
+				<string>pci14e4,4318</string>
+				<string>pci14e4,4319</string>
+				<string>pci14e4,431a</string>
+				<string>pci14e4,4320</string>
+				<string>pci14e4,4324</string>
+				<string>pci14e4,4325</string>
+				<string>pci14e4,4328</string>
+				<string>pci14e4,432c</string>
+				<string>pci14e4,432d</string>
+			</array>
 			<key>IOProbeScore</key>
 			<integer>6000</integer>
-			<key>IOPropertyMatch</key>
-			<dict>
-				<key>IOCPUNumber</key>
-				<integer>0</integer>
-			</dict>
 			<key>IOProviderClass</key>
-			<string>AppleACPICPU</string>
-			<key>IOResourceMatch</key>
-			<string>ACPI</string>
+			<string>IOPCIDevice</string>
+			<key>TruePowerOff</key>
+			<true/>
 		</dict>
 	</dict>
 	<key>NSHumanReadableCopyright</key>
-	<string>Copyright © 2017 - 2019 PMheart. All rights reserved.</string>
+	<string>Copyright © 2017 lvs1974. All rights reserved.</string>
 	<key>OSBundleCompatibleVersion</key>
 	<string>1.0</string>
 	<key>OSBundleLibraries</key>
 	<dict>
 		<key>as.vit9696.Lilu</key>
-		<string>1.2.0</string>
-		<key>com.apple.iokit.IOACPIFamily</key>
-		<string>1.0.0d1</string>
+		<string>1.2.6</string>
+		<key>com.apple.driver.corecapture</key>
+		<string>1.0.0</string>
+		<key>com.apple.iokit.IONetworkingFamily</key>
+		<string>1.5</string>
+		<key>com.apple.iokit.IOPCIFamily</key>
+		<string>2.7</string>
 		<key>com.apple.kpi.bsd</key>
 		<string>12.0.0</string>
 		<key>com.apple.kpi.dsep</key>
@@ -98,6 +123,6 @@
 		<string>12.0.0</string>
 	</dict>
 	<key>OSBundleRequired</key>
-	<string>Root</string>
+	<string>Network-Root</string>
 </dict>
 </plist>
