--- a/EFI/OC/Kexts/USBPorts.kext/Contents/Info.plist
+++ b/EFI/OC/Kexts/USBPorts.kext/Contents/Info.plist
@@ -5,7 +5,7 @@
 	<key>CFBundleDevelopmentRegion</key>
 	<string>English</string>
 	<key>CFBundleGetInfoString</key>
-	<string>1.0 Copyright © 2018 Headsoft. All rights reserved.</string>
+	<string>1.0 Copyright © 2018-2020 Headsoft. All rights reserved.</string>
 	<key>CFBundleIdentifier</key>
 	<string>com.Headsoft.USBPorts</string>
 	<key>CFBundleInfoDictionaryVersion</key>
@@ -20,22 +20,32 @@
 	<string>????</string>
 	<key>CFBundleVersion</key>
 	<string>1.0</string>
-	<key>IOKitPersonalities</key>
+	<key>IOKitPersonalities_x86_64</key>
 	<dict>
 		<key>iMac19,1-XHC</key>
 		<dict>
 			<key>CFBundleIdentifier</key>
-			<string>com.apple.driver.AppleUSBMergeNub</string>
+			<string>com.apple.driver.AppleUSBHostMergeProperties</string>
 			<key>IOClass</key>
-			<string>AppleUSBMergeNub</string>
+			<string>AppleUSBHostMergeProperties</string>
 			<key>IONameMatch</key>
 			<string>XHC</string>
+			<key>IOPCIPrimaryMatch</key>
+			<string>0xa36d8086</string>
 			<key>IOProbeScore</key>
 			<integer>5000</integer>
 			<key>IOProviderClass</key>
 			<string>AppleUSBXHCIPCI</string>
 			<key>IOProviderMergeProperties</key>
 			<dict>
+				<key>kUSBSleepPortCurrentLimit</key>
+				<integer>2100</integer>
+				<key>kUSBSleepPowerSupply</key>
+				<integer>5100</integer>
+				<key>kUSBWakePortCurrentLimit</key>
+				<integer>2100</integer>
+				<key>kUSBWakePowerSupply</key>
+				<integer>5100</integer>
 				<key>port-count</key>
 				<data>FgAAAA==</data>
 				<key>ports</key>
@@ -44,6 +54,8 @@
 					<dict>
 						<key>UsbConnector</key>
 						<integer>255</integer>
+						<key>name</key>
+						<string>HS01</string>
 						<key>port</key>
 						<data>AQAAAA==</data>
 					</dict>
@@ -51,13 +63,17 @@
 					<dict>
 						<key>UsbConnector</key>
 						<integer>255</integer>
+						<key>name</key>
+						<string>HS03</string>
 						<key>port</key>
 						<data>AwAAAA==</data>
 					</dict>
 					<key>HS04</key>
 					<dict>
 						<key>UsbConnector</key>
-						<integer>0</integer>
+						<integer>255</integer>
+						<key>name</key>
+						<string>HS04</string>
 						<key>port</key>
 						<data>BAAAAA==</data>
 					</dict>
@@ -65,6 +81,8 @@
 					<dict>
 						<key>UsbConnector</key>
 						<integer>3</integer>
+						<key>name</key>
+						<string>HS05</string>
 						<key>port</key>
 						<data>BQAAAA==</data>
 					</dict>
@@ -72,6 +90,8 @@
 					<dict>
 						<key>UsbConnector</key>
 						<integer>0</integer>
+						<key>name</key>
+						<string>HS07</string>
 						<key>port</key>
 						<data>BwAAAA==</data>
 					</dict>
@@ -79,6 +99,8 @@
 					<dict>
 						<key>UsbConnector</key>
 						<integer>0</integer>
+						<key>name</key>
+						<string>HS08</string>
 						<key>port</key>
 						<data>CAAAAA==</data>
 					</dict>
@@ -86,6 +108,8 @@
 					<dict>
 						<key>UsbConnector</key>
 						<integer>3</integer>
+						<key>name</key>
+						<string>HS09</string>
 						<key>port</key>
 						<data>CQAAAA==</data>
 					</dict>
@@ -93,6 +117,8 @@
 					<dict>
 						<key>UsbConnector</key>
 						<integer>3</integer>
+						<key>name</key>
+						<string>HS10</string>
 						<key>port</key>
 						<data>CgAAAA==</data>
 					</dict>
@@ -100,6 +126,8 @@
 					<dict>
 						<key>UsbConnector</key>
 						<integer>3</integer>
+						<key>name</key>
+						<string>SS01</string>
 						<key>port</key>
 						<data>EQAAAA==</data>
 					</dict>
@@ -107,6 +135,8 @@
 					<dict>
 						<key>UsbConnector</key>
 						<integer>9</integer>
+						<key>name</key>
+						<string>SS02</string>
 						<key>port</key>
 						<data>EgAAAA==</data>
 					</dict>
@@ -114,6 +144,8 @@
 					<dict>
 						<key>UsbConnector</key>
 						<integer>3</integer>
+						<key>name</key>
+						<string>SS05</string>
 						<key>port</key>
 						<data>FQAAAA==</data>
 					</dict>
@@ -121,6 +153,8 @@
 					<dict>
 						<key>UsbConnector</key>
 						<integer>3</integer>
+						<key>name</key>
+						<string>SS06</string>
 						<key>port</key>
 						<data>FgAAAA==</data>
 					</dict>
