Oops, not required

--- a/EFI/OC/config.plist
+++ b/EFI/OC/config.plist
@@ -74,7 +74,7 @@
 		<key>Quirks</key>
 		<dict>
 			<key>AllowRelocationBlock</key>
-			<true/>
+			<false/>
 			<key>AvoidRuntimeDefrag</key>
 			<true/>
 			<key>DevirtualiseMmio</key>
