--- a/EFI/OC/config.plist
+++ b/EFI/OC/config.plist
@@ -91,9 +91,9 @@
 			<true/>
 			<key>EnableWriteUnprotector</key>
 			<false/>
+                <key>ForceBooterSignature</key>
+                <false/>
 			<key>ForceExitBootServices</key>
-			<false/>
-			<key>ForceBooterSignature</key>
 			<false/>
 			<key>ProtectMemoryRegions</key>
 			<false/>
@@ -107,6 +107,8 @@
 			<integer>0</integer>
 			<key>RebuildAppleMemoryMap</key>
 			<true/>
+                <key>ResizeAppleGpuBars</key>
+                <integer>-1</integer>
 			<key>SetupVirtualMap</key>
 			<false/>
 			<key>SignalAppleOS</key>
@@ -145,7 +147,7 @@
 				<key>BundlePath</key>
 				<string>Lilu.kext</string>
 				<key>Comment</key>
-				<string>Patch engine</string>
+                    <string>V1.5.7 | Patch engine</string>
 				<key>Enabled</key>
 				<true/>
 				<key>ExecutablePath</key>
@@ -163,7 +165,7 @@
 				<key>BundlePath</key>
 				<string>VirtualSMC.kext</string>
 				<key>Comment</key>
-				<string>SMC emulator</string>
+                    <string>V1.2.7 | SMC emulator</string>
 				<key>Enabled</key>
 				<true/>
 				<key>ExecutablePath</key>
@@ -181,7 +183,7 @@
 				<key>BundlePath</key>
 				<string>SMCProcessor.kext</string>
 				<key>Comment</key>
-				<string></string>
+                    <string>V1.2.7</string>
 				<key>Enabled</key>
 				<true/>
 				<key>ExecutablePath</key>
@@ -199,7 +201,7 @@
 				<key>BundlePath</key>
 				<string>SMCSuperIO.kext</string>
 				<key>Comment</key>
-				<string></string>
+                    <string>V1.2.7</string>
 				<key>Enabled</key>
 				<true/>
 				<key>ExecutablePath</key>
@@ -217,7 +219,7 @@
 				<key>BundlePath</key>
 				<string>WhateverGreen.kext</string>
 				<key>Comment</key>
-				<string>Video patches</string>
+                    <string>V1.5.5</string>
 				<key>Enabled</key>
 				<true/>
 				<key>ExecutablePath</key>
@@ -235,7 +237,7 @@
 				<key>BundlePath</key>
 				<string>AppleALC.kext</string>
 				<key>Comment</key>
-				<string>Audio patches</string>
+                    <string>V1.6.6 | Audio patches</string>
 				<key>Enabled</key>
 				<true/>
 				<key>ExecutablePath</key>
@@ -253,7 +255,7 @@
 				<key>BundlePath</key>
 				<string>IntelMausi.kext</string>
 				<key>Comment</key>
-				<string>Intel Ethernet LAN</string>
+                    <string>V1.0.7 | Intel Ethernet LAN</string>
 				<key>Enabled</key>
 				<true/>
 				<key>ExecutablePath</key>
@@ -271,7 +273,7 @@
 				<key>BundlePath</key>
 				<string>USBPorts.kext</string>
 				<key>Comment</key>
-				<string>XHC ports configuration</string>
+                    <string>V1.0 | XHC ports configuration</string>
 				<key>Enabled</key>
 				<true/>
 				<key>ExecutablePath</key>
@@ -289,7 +291,7 @@
 				<key>BundlePath</key>
 				<string>NVMeFix.kext</string>
 				<key>Comment</key>
-				<string>Fix random kernel panic after wake</string>
+                    <string>V1.0.9 | Fix random kernel panic after wake</string>
 				<key>Enabled</key>
 				<true/>
 				<key>ExecutablePath</key>
@@ -307,7 +309,7 @@
 				<key>BundlePath</key>
 				<string>AirportBrcmFixup.kext</string>
 				<key>Comment</key>
-				<string>Fix Wi-Fi lagging after wake</string>
+                    <string>V2.1.3 | Fix Wi-Fi lagging after wake</string>
 				<key>Enabled</key>
 				<true/>
 				<key>ExecutablePath</key>
@@ -833,6 +835,8 @@
 			<false/>
 			<key>RequestBootVarRouting</key>
 			<true/>
+                <key>ResizeGpuBars</key>
+                <integer>-1</integer>
 			<key>TscSyncTimeout</key>
 			<integer>0</integer>
 			<key>UnblockFsConnect</key>
